Href and src are now more accurate for page navigation

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -55,19 +55,19 @@
     <div class="container">
         <div class="row people">
             <!--This is the first person Kim and her contact info-->
-            <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+            <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="/images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
                 <h3 class="name">Kim M. Bodendorf</h3>
                 <p class="title" style="color: rgb(163,162,162);"><em>Interim Executive Director</em></p>
                 <p class="description"><i class="fa fa-envelope-o"></i>&nbsp; E - Mail:&nbsp;<a href="mailto:Kim@sproutcreekfarm.org">Kim@sproutcreekfarm.org</a><br><i class="fa fa-phone"></i>&nbsp; Telephone:&nbsp;(845) 485-8438 ext. 104</p>
             </div>
             <!--This is the second person Margo and her contact info-->
-            <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+            <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="/images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
                 <h3 class="name">Margo Morris</h3>
                 <p class="title" style="color: rgb(163,162,162);"><em>Director of Develpment</em><br></p>
                 <p class="description"><i class="fa fa-envelope-o"></i>&nbsp; E - Mail:&nbsp;<a href="mailto:Margo@sproutcreekfarm.org">Margo@sproutcreekfarm.org</a><br>&nbsp; Telephone:&nbsp;(845) 485-8438 ext. 104</p>
             </div>
             <!--This is the third person Paula and her contact info-->
-            <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+            <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="/images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
                 <h3 class="name">Paula Gruner</h3>
                 <p class="title" style="color: rgb(163,162,162);"><em>Accounts Management/Finance</em></p>
                 <p class="description"><i class="fa fa-envelope-o"></i>&nbsp; E - Mail:&nbsp;<a href="mailto:finance@sproutcreekfarm.org">finance@sproutcreekfarm.org</a><br><i class="fa fa-phone"></i>&nbsp; Telephone:&nbsp;(845) 485-8438 ext. 102</p>
@@ -76,7 +76,7 @@
         <!--This is the next row of people-->
         <div class="row people">
             <!--This is the first person in the second row-->
-            <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+            <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="/images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
                 <h3 class="name">Kerry Gallagher</h3>
                 <p class="title" style="color: rgb(163,162,162);"><em>Director of Education</em></p>
                 <p class="description" style="font-size: 14px;"><i class="fa fa-envelope-o"></i>&nbsp; E - Mail:&nbsp;<a href="mailto:education@sproutcreekfarm.org">education@sproutcreekfarm.org</a><br><i class="fa fa-envelope-o"></i> E - Mail:&nbsp;<a href="mailto:camps@sproutcreekfarm.org">camps@sproutcreekfarm.org</a><br>
@@ -84,13 +84,13 @@
                         class="fa fa-phone"></i>&nbsp; Telephone:&nbsp;(845) 485-8438 ext. 103</p>
             </div>
             <!--This is the second person in the second row-->
-            <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+            <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="/images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
                 <h3 class="name" style="font-size: 21px;">CREAMERY PLANT MANAGER /CHEESE MAKER</h3>
                 <p class="title"></p>
                 <p class="description"><br><i class="fa fa-envelope-o"></i>&nbsp; E - Mail:&nbsp;<a href="mailto:Cheese@sproutcreekfarm.org">Cheese@sproutcreekfarm.org</a><br><i class="fa fa-phone"></i>&nbsp; Telephone:&nbsp;(845) 206-0236</p>
             </div>
             <!--This is the third person in the second row-->
-            <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+            <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="/images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
                 <h3 class="name">Marcello Chimbo</h3>
                 <p class="title" style="color: rgb(163,162,162);"><em>Head Cheese Maker / Sales / Shipping / Distribution</em></p>
                 <p class="description"><i class="fa fa-envelope-o"></i>&nbsp; E - Mail:&nbsp;<a href="mailto:Cheese@sproutcreekfarm.org">Cheese@sproutcreekfarm.org</a><br><i class="fa fa-phone"></i>&nbsp; Telephone:&nbsp;(845)-206-0236</p>
