--- a/views/create_account.hbs
+++ b/views/create_account.hbs
@@ -27,7 +27,7 @@
                                 <div class="col-sm-6"><input class="form-control form-control-user" type="text" id="exampleFirstName" placeholder="Last Name" name="last_name" style="font-size: 18px;"></div>
                             </div>
                             <!-- This is the user name field-->
-                            <div class="form-group"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="User Name" name="username" style="font-size: 18px;"></div>
+                            <div class="form-group"><input class="form-control form-control-user" type="text" id="username"  placeholder="Username" name="username" style="font-size: 18px;"></div>
                             <!-- This is the email address field-->
                             <div class="form-group"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Email Address" name="email" style="font-size: 18px;"></div>
                             <!-- This is password fields-->
@@ -39,9 +39,9 @@
                             <hr>
                         </form>
                         <!-- This is the forgot password link for the user -->
-                        <div class="text-center" style="margin-top: 14px;"><a class="small" href="forgot_password" style="font-size: 16px;margin-top: 7px;">Forgot Password?</a></div>
+                        <div class="text-center" style="margin-top: 14px;"><a class="small" href="/forgot_password" style="font-size: 16px;margin-top: 7px;">Forgot Password?</a></div>
                         <!-- This is the login button for the user -->
-                        <div class="text-center"><a class="small" href="login" style="font-size: 16px;height: auto;margin: 0px;padding: 0px;">Already have an account? Login!</a></div>
+                        <div class="text-center"><a class="small" href="/login" style="font-size: 16px;height: auto;margin: 0px;padding: 0px;">Already have an account? Login!</a></div>
                     </div>
                 </div>
             </div>
