--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -23,8 +23,8 @@
       </div>
       <!--This is the last image we see with the Sprout Creek Logo in it at the bottom of the page-->
       <div id="box-1" style="background-position: right;background-repeat: no-repeat;background-size: cover;background-image: url(&quot;none&quot;);opacity: 1;">
-          <h1 data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" style="background-image: url(&quot;images/IMG_3123_0-1.jpg?h=81f4696c77d57e8efb55ffdd066e10ba&quot;);background-repeat: no-repeat;background-size: cover;background-position: right;font-size: 56;margin: 0px;padding: 0px;"><img data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" src="images/logo-1.png?h=7e41bf5ab9b7fcded5742bc15631d247" style="width: 328px;"><br><br>educate ·&nbsp;cultivate ·&nbsp;aspire</h1>
+          <h1 data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" style="background-image: url(&quot;images/IMG_3123_0-1.jpg?h=81f4696c77d57e8efb55ffdd066e10ba&quot;);background-repeat: no-repeat;background-size: cover;background-position: right;font-size: 56;margin: 0px;padding: 0px;"><img data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" src="/images/logo-1.png?h=7e41bf5ab9b7fcded5742bc15631d247" style="width: 328px;"><br><br>educate ·&nbsp;cultivate ·&nbsp;aspire</h1>
       </div>
   </div>
-  
+
 </body>
