--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -18,19 +18,19 @@
         <!--This is the links to the articles-->
         <div class="row text-center articles" style="padding-top: 30px;">
             <!--The Forbes article-->
-            <div class="col-sm-6 col-md-4 item" style="width: 387px;padding-right: 20px;padding-left: 12px;"><a href="https://www.forbes.com/sites/jillbarth/2018/08/16/harvest-season-wine-pairing-alpine-style-cheese-and-alsatian-wine/#1a90aebd7538"><img class="img-fluid" src="images/forbeslogo.jpg?h=8025f52de11570ffe01b2607490ef7d8" style="width: 162px;font-size: 22px;height: 142px;" width="200px" height="200px"></a>
+            <div class="col-sm-6 col-md-4 item" style="width: 387px;padding-right: 20px;padding-left: 12px;"><a href="https://www.forbes.com/sites/jillbarth/2018/08/16/harvest-season-wine-pairing-alpine-style-cheese-and-alsatian-wine/#1a90aebd7538"><img class="img-fluid" src="/images/forbeslogo.jpg?h=8025f52de11570ffe01b2607490ef7d8" style="width: 162px;font-size: 22px;height: 142px;" width="200px" height="200px"></a>
                 <h3
                     class="name" style="font-size: 22px;"><strong>Harvest Season Pairing: Alpine-Style Cheese and Alsatain Wine</strong></h3>
                     <p class="description" style="font-size: 16px;">"Alpine-style cheese is also ideal for a cheese plate or in the fondue pot and it shines when paired with Alsatian wines such as Crémant d'Alsace, Reisling, Pinot Gris and Pinot Noir."<br><br>Read More!</p><a class="action" href="https://www.forbes.com/sites/jillbarth/2018/08/16/harvest-season-wine-pairing-alpine-style-cheese-and-alsatian-wine/#1a90aebd7538"><i class="fa fa-arrow-circle-right"></i></a></div>
             <!--The Marist acquisition-->
             <div
-                class="col-sm-6 col-md-4 item"><a href="https://www.marist.edu/-/news-sprout-creek-farm-transfers-control-of-operations-to-marist-college"><img class="img-fluid" src="images/MaristStudentCenter.jpg?h=119a89093ef2e1cbc88c815cee702b1a" style="background-image: url(&quot;assets/img/MaristStudentCenter.jpg?h=119a89093ef2e1cbc88c815cee702b1a&quot;);width: 314px;height: 152px;min-width: 151px;"></a>
+                class="col-sm-6 col-md-4 item"><a href="https://www.marist.edu/-/news-sprout-creek-farm-transfers-control-of-operations-to-marist-college"><img class="img-fluid" src="/images/MaristStudentCenter.jpg?h=119a89093ef2e1cbc88c815cee702b1a" style="background-image: url(&quot;assets/img/MaristStudentCenter.jpg?h=119a89093ef2e1cbc88c815cee702b1a&quot;);width: 314px;height: 152px;min-width: 151px;"></a>
                 <h3
                     class="name" style="font-size: 22px;"><strong>Sprout Creek Farm Transfers Control of Operations To Marist College</strong></h3>
                     <p class="description" style="font-size: 16px;">Sprout Creek Farm, a nonprofit working farm and education center in Dutchess County, has transferred control of its operations to Marist College. The farm will remain an independent nonprofit.<br><br>Read More!<br></p><a class="action"
                         href="https://www.marist.edu/-/news-sprout-creek-farm-transfers-control-of-operations-to-marist-college"><i class="fa fa-arrow-circle-right"></i></a></div>
         <!--This is the last article about the Hudson Valley and the kids-->
-        <div class="col-sm-6 col-md-4 item"><a href="https://hudsonvalley.kidsoutandabout.com/content/top-20-places-take-kids-hudson-valley"><img class="img-fluid" src="images/outandabout.png?h=102b46a9f6dbcf2b8a870a767bfd2113" style="width: 252px;height: 116px;min-width: 151px;"></a>
+        <div class="col-sm-6 col-md-4 item"><a href="https://hudsonvalley.kidsoutandabout.com/content/top-20-places-take-kids-hudson-valley"><img class="img-fluid" src="/images/outandabout.png?h=102b46a9f6dbcf2b8a870a767bfd2113" style="width: 252px;height: 116px;min-width: 151px;"></a>
             <h3 class="name" style="font-size: 22px;"><strong>Sprout Creek Farm Rated 'Favorite Nature Center in Hudson Valley'</strong></h3>
             <p class="description" style="font-size: 16px;"><em>Hudson Valley Magazine</em>&nbsp;voted us one of the top 20 places to take your kids in the Hudson Valley.<br><br>Read More!<br></p><a class="action" href="https://hudsonvalley.kidsoutandabout.com/content/top-20-places-take-kids-hudson-valley"><i class="fa fa-arrow-circle-right"></i></a></div>
     </div>
