--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,39 +13,39 @@
     <title>Sprout Creek Farm</title>
 
     <!--Import the images in the nav bar and footer here-->
-    <link rel="icon" type="image/png" sizes="290x290" href="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
-    <link rel="icon" type="image/png" sizes="290x290" href="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
-    <link rel="icon" type="image/png" sizes="290x290" href="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
-    <link rel="icon" type="image/png" sizes="290x290" href="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
-    <link rel="icon" type="image/png" sizes="290x290" href="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+    <link rel="icon" type="image/png" sizes="290x290" href="/images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+    <link rel="icon" type="image/png" sizes="290x290" href="/images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+    <link rel="icon" type="image/png" sizes="290x290" href="/images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+    <link rel="icon" type="image/png" sizes="290x290" href="/images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+    <link rel="icon" type="image/png" sizes="290x290" href="/images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
 
     <!--Here we import the stylesheets for the nav bar and footer-->
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css?h=6d65b9bd53bb19cdce4b34d2020a2b57">
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css?h=6d65b9bd53bb19cdce4b34d2020a2b57">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-    <link rel="stylesheet" href="fonts/fontawesome-all.min.css?h=cfa788754642173dafbd830bd7969fdb">
-    <link rel="stylesheet" href="fonts/font-awesome.min.css?h=cfa788754642173dafbd830bd7969fdb">
-    <link rel="stylesheet" href="fonts/ionicons.min.css?h=cfa788754642173dafbd830bd7969fdb">
-    <link rel="stylesheet" href="fonts/fontawesome5-overrides.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="/fonts/fontawesome-all.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="/fonts/font-awesome.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="/fonts/ionicons.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="/fonts/fontawesome5-overrides.min.css?h=cfa788754642173dafbd830bd7969fdb">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/assets/owl.carousel.css">
-    <link rel="stylesheet" href="stylesheets/styles.min.css?h=ff1782feec5a88a7ed7e0e0d66a20689">
+    <link rel="stylesheet" href="/stylesheets/styles.min.css?h=ff1782feec5a88a7ed7e0e0d66a20689">
 
-    <!--Import the necessary javascript files-->
-    <script src="javascripts/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
-    <script src="bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
-    <script src="javascripts/chart.min.js?h=cfa788754642173dafbd830bd7969fdb"></script>
+
+    <script src="/javascripts/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
+    <script src="/bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
+    <script src="/javascripts/chart.min.js?h=cfa788754642173dafbd830bd7969fdb"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/owl.carousel.js"></script>
-    <script src="javascripts/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610" async></script>
+    <script src="/javascripts/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610" async></script>
 
 
 
     <!--Here we import the client javascript-->
-    <script src="javascripts/client.js" async></script>
+    <script src="/javascripts/client.js" async></script>
 </head>
 
 <!--This body has the nav bar and footer code in it-->
@@ -53,7 +53,7 @@
 
     <!--This is where the nav bar begins-->
     <nav class="navbar navbar-light navbar-expand-lg sticky-top navigation-clean" style="background-color: rgb(255,250,241);padding: 0px;width: 100%;height: 150px;">
-        <div class="container-fluid"><img class="img-fluid" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 500px;height: 51%;padding: 0px;margin: 3px;">
+        <div class="container-fluid"><img class="img-fluid" src="/images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 500px;height: 51%;padding: 0px;margin: 3px;">
             <!--Here is the Sprout Creek Farm words in the header-->
             <div><a class="navbar-brand text-left float-left" href="/" style="padding: 3px;margin: 0px;font-size: 25px;">Sprout Creek Farm<div style="width: 173px;height: 32px;"><input class="form-control-plaintext" type="text" value="Educate, Cultivate, Aspire" readonly="" style="font-size: 15px;width: 176px;"></div></a></div>
             <!--This is where the words Sprout Creek Farm act as a button but is a clickable logo-->
@@ -63,18 +63,18 @@
                     <!--The nav bar is built as a list and each link is the list item-->
                     <ul class="nav navbar-nav ml-auto" style="background-color: #fffaf1;">
                         <!--Here are the links to the about, market, at the farm drop down, and contact pages-->
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="about" style="height: 46px;width: 98px;font-size: 20px;">About</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="market" style="font-size: 20px;">Market</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="/about" style="height: 46px;width: 98px;font-size: 20px;">About</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="/market" style="font-size: 20px;">Market</a></li>
                         <li class="nav-item" role="presentation"></li>
                         <li class="nav-item dropdown" style="background-color: rgb(255,250,241);"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="" style="font-size: 20px;">At The Farm&nbsp;</a>
-                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="visitTheFarm">Visit The Farm</a><a class="dropdown-item" role="presentation" href="summerCamp">Summer Camp</a><a class="dropdown-item" role="presentation" href="blog">Blog</a></div>
+                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="/visitTheFarm">Visit The Farm</a><a class="dropdown-item" role="presentation" href="/summerCamp">Summer Camp</a><a class="dropdown-item" role="presentation" href="/blog">Blog</a></div>
                         </li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="contact" style="font-size: 20px;">Contact</a></li>
-                        <li class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-shopping-cart fa-fw" style="font-size: 23px;height: 27px;width: 30px;margin: 3px;"></i><span class="badge badge-danger badge-counter"></span></a>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="/contact" style="font-size: 20px;">Contact</a></li>
+                        <li class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" href = "/cart" aria-expanded="false"><i class="fas fa-shopping-cart fa-fw" style="font-size: 23px;height: 27px;width: 30px;margin: 3px;"></i><span class="badge badge-danger badge-counter"></span></a>
                             <!--This is where the cart drop down is located-->
                             <div
                                 class="dropdown-menu dropdown-list dropdown-menu-right animated--grow-in" role="menu">
-                                <h6 class="dropdown-header" style="font-size: 14px;background-color: rgb(180,116,66);">My basket</h6>
+                                <h6 class="dropdown-header" style="font-size: 14px;background-color: rgb(180,116,66);" href = "/cart">My basket</h6>
                                 <a class="d-flex align-items-center dropdown-item" href="#">
                                     <div class="text-center float-left dropdown-list-image mr-3"><img class="rounded-circle" src="images/bogart.jpg?h=e60673f3dcbecae44bc43ea5761f59d0" style="width: 50px;height: 50px;"></div>
                                     <div class="font-weight-bold">
@@ -85,7 +85,7 @@
                                     <p class="text-center d-inline float-left"></p>
                                 </a>
                                 <a class="d-flex align-items-center dropdown-item" href="#">
-                                    <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="images/batch35.jpg?h=3228dc9d8a5e17d2246c29dfb556fb50" style="width: 50px;height: 50px;"></div>
+                                    <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="/images/batch35.jpg?h=3228dc9d8a5e17d2246c29dfb556fb50" style="width: 50px;height: 50px;"></div>
                                     <div class="font-weight-bold">
                                         <div class="text-truncate"><span style="font-size: 15px;">Batch 35</span></div>
                                         <p class="small text-gray-500 mb-0" style="font-size: 13px;">Price Per Unit: $10.00<br>Quantity: 1</p>
@@ -113,17 +113,17 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-md-3 item">
-                        <ul></ul><img src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 166px;padding: -2px;margin: 1px;"></div>
+                        <ul></ul><img src="/images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 166px;padding: -2px;margin: 1px;"></div>
                     <div class="col-sm-6 col-md-3 item">
                         <ul>
                             <!--These are the links on the bottom-->
-                            <li class="nav-item" role="presentation"><a class="nav-link" href="about" style="height: 35px;width: 98px;font-size: 20px;">About</a></li>
-                            <li class="nav-item" role="presentation"><a class="nav-link" href="market" style="font-size: 20px;">Market</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" href="/about" style="height: 35px;width: 98px;font-size: 20px;">About</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" href="/market" style="font-size: 20px;">Market</a></li>
                             <li class="nav-item" role="presentation"></li>
                             <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#" style="font-size: 20px;">At The Farm&nbsp;</a>
-                                <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="visitTheFarm">Visit The Farm</a><a class="dropdown-item" role="presentation" href="summerCamp">Summer Camp</a><a class="dropdown-item" role="presentation" href="blog">Blog</a></div>
+                                <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="/visitTheFarm">Visit The Farm</a><a class="dropdown-item" role="presentation" href="/summerCamp">Summer Camp</a><a class="dropdown-item" role="presentation" href="/blog">Blog</a></div>
                             </li>
-                            <li class="nav-item" role="presentation"><a class="nav-link" href="contact" style="font-size: 20px;">Contact</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" href="/contact" style="font-size: 20px;">Contact</a></li>
 
                         </ul>
                     </div>
