--- a/views/login.hbs
+++ b/views/login.hbs
@@ -21,9 +21,9 @@
                           </div>
 
                           <!--This form is where the user will input the credentials to log in-->
-                          <form action="/api/login" method="post" class="user" style="margin-top: 0px;">
-                              <div class="form-group"><input class="form-control form-control-user" type="username" id="username" aria-describedby="emailHelp" placeholder="Enter Username" name="username" style="font-size: 18px;"></div>
-                              <div class="form-group"><input class="form-control form-control-user" type="password" id="password" placeholder="Password" name="password" style="font-size: 18px;"></div>
+                          <form class="user" style="margin-top: 0px;">
+                              <div class="form-group"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Username" name="email" style="font-size: 18px;"></div>
+                              <div class="form-group"><input class="form-control form-control-user" type="password" id="exampleInputPassword" placeholder="Password" name="password" style="font-size: 18px;"></div>
                               <div class="form-group">
                                   <div class="custom-control custom-checkbox small">
                                       <div class="form-check"><input class="form-check-input custom-control-input" type="checkbox" id="formCheck-1"><label class="form-check-label custom-control-label" for="formCheck-1" style="font-size: 14px;">Remember Me</label></div>
@@ -33,8 +33,8 @@
                               <hr>
                           </form>
                           <!--On the bottom of the page are two links for forgot password and to create an account if you need them-->
-                          <div class="text-center"><a class="small" href="forgot_password" style="font-size: 16px;">Forgot Password?</a></div>
-                          <div class="text-center"><a class="small" href="create_account" style="font-size: 16px;">Create an Account!</a></div>
+                          <div class="text-center"><a class="small" href="/forgot_password" style="font-size: 16px;">Forgot Password?</a></div>
+                          <div class="text-center"><a class="small" href="/create_account" style="font-size: 16px;">Create an Account!</a></div>
                       </div>
                   </div>
               </div>
