--- a/views/visitTheFarm.hbs
+++ b/views/visitTheFarm.hbs
@@ -27,7 +27,7 @@
             </div>
             <div class="col" style="margin-bottom: 70px;margin-top: 10px;">
                 <div class="card-group">
-                    <div class="card"><img class="card-img-top w-100 d-block" src="images/dda9b655-9790-4650-aefe-08e6fbff85ea.jpeg?h=7162dc4aae71caa77078cf4356b642aa" style="height: 258px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="/images/dda9b655-9790-4650-aefe-08e6fbff85ea.jpeg" style="height: 258px;">
                         <div class="card-body text-center">
                             <h4 class="card-title"><strong>Cupcake Baking Class</strong><br></h4>
                             <p class="card-text"></p>
@@ -52,7 +52,7 @@
                                 </div>
                             </div><a class="btn btn-primary" role="button" style="font-size: 20px;background-color: rgb(79,121,96);" href="https://www.hisawyer.com/sprout-creek-farm/schedules?schedule_id=camps&amp;sched_ids[]=38183">Register</a></div>
                     </div>
-                    <div class="card"><img class="card-img-top w-100 d-block" src="images/pizza.jpg?h=c08697b3f3667b05d92257bdbae8fcc1" style="height: 258px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="/images/pizza.jpg?h=c08697b3f3667b05d92257bdbae8fcc1" style="height: 258px;">
                         <div class="card-body text-center">
                             <h4 class="card-title"><strong>Pizza</strong>&nbsp;<strong>Cooking Class</strong><br></h4>
                             <p class="card-text"></p>
@@ -77,7 +77,7 @@
                                 </div>
                             </div><a class="btn btn-primary" role="button" style="font-size: 20px;background-color: rgb(79,121,96);" href="https://www.hisawyer.com/sprout-creek-farm/schedules/activity-set/102176">Register</a></div>
                     </div>
-                    <div class="card"><img class="card-img-top w-100 d-block" src="images/72763727_10157496007277591_6340360653705838592_n.jpg?h=52287ff039ced51ec6099335b9d09f5b" style="height: 258px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="/images/72763727_10157496007277591_6340360653705838592_n.jpg?h=52287ff039ced51ec6099335b9d09f5b" style="height: 258px;">
                         <div class="card-body text-center">
                             <h4 class="card-title"><strong>&nbsp;Pasta Cooking Class</strong><br></h4>
                             <p class="card-text"></p>
@@ -113,7 +113,7 @@
             </div>
             <div class="col" style="margin-bottom: 70px;margin-top: 10px;">
                 <div class="card-group">
-                    <div class="card"><img class="card-img-top w-100 d-block" src="images/50652009_10156819812262591_5460145400319049728_n.png?h=994cb2cefaa5c0fc6bd600109dd36479" style="height: 258px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="/images/50652009_10156819812262591_5460145400319049728_n.png?h=994cb2cefaa5c0fc6bd600109dd36479" style="height: 258px;">
                         <div class="card-body text-center">
                             <h4 class="card-title"><strong>Baking Butter Cookies</strong><br></h4>
                             <p class="card-text"></p>
@@ -138,7 +138,7 @@
                                 </div>
                             </div><a class="btn btn-primary" role="button" style="font-size: 20px;background-color: rgb(79,121,96);" href="https://www.facebook.com/events/603606350090919/">Register</a></div>
                     </div>
-                    <div class="card"><img class="card-img-top w-100 d-block" src="images/45449994_10156653409547591_4180410837359394816_n.jpg?h=39f1d4f653f65ade688b2249d5d8a84f" style="height: 258px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="/images/45449994_10156653409547591_4180410837359394816_n.jpg?h=39f1d4f653f65ade688b2249d5d8a84f" style="height: 258px;">
                         <div class="card-body text-center">
                             <h4 class="card-title"><strong>Pies From Scratch</strong><br></h4>
                             <p class="card-text"></p>
@@ -163,7 +163,7 @@
                                 </div>
                             </div><a class="btn btn-primary" role="button" style="font-size: 20px;background-color: rgb(79,121,96);" href="https://www.facebook.com/events/542094452882546/">Register</a></div>
                     </div>
-                    <div class="card"><img class="card-img-top w-100 d-block" src="images/75446798_10157531693187591_2098450497462599680_n.jpg?h=cdc369c14d09f97bc05b731ac65d4c16" style="height: 258px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="/images/75446798_10157531693187591_2098450497462599680_n.jpg?h=cdc369c14d09f97bc05b731ac65d4c16" style="height: 258px;">
                         <div class="card-body text-center">
                             <h4 class="card-title"><strong>Cheese &amp; Beer Pairing Workshop</strong><br></h4>
                             <p class="card-text"></p>
@@ -199,7 +199,7 @@
             </div>
             <div class="col" style="margin-bottom: 70px;height: 640px;margin-top: 10px;">
                 <div class="card-group">
-                    <div class="card"><img class="card-img-top w-100 d-block" src="images/45156401_10156644132432591_690566273737687040_n.jpg?h=db356794ea2dc37e257bcd65623afc00" style="height: 258px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="/images/45156401_10156644132432591_690566273737687040_n.jpg?h=db356794ea2dc37e257bcd65623afc00" style="height: 258px;">
                         <div class="card-body text-center">
                             <h4 class="card-title"><strong>Farm to Table Brunch Buffet</strong><br></h4>
                             <p class="card-text"></p>
@@ -224,7 +224,7 @@
                                 </div>
                             </div><a class="btn btn-primary" role="button" style="font-size: 20px;background-color: rgb(79,121,96);" href="https://www.facebook.com/events/574791189957416/">Register</a></div>
                     </div>
-                    <div class="card"><img class="card-img-top w-100 d-block" src="images/69705420_10157395769117591_7674058199384719360_n.jpg?h=3028b246c9c6e1a88b86f866c799bb82" style="height: 258px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="/images/69705420_10157395769117591_7674058199384719360_n.jpg?h=3028b246c9c6e1a88b86f866c799bb82" style="height: 258px;">
                         <div class="card-body text-center">
                             <h4 class="card-title"><strong>Fall Festival 2019</strong><br></h4>
                             <p class="card-text"></p>
@@ -249,7 +249,7 @@
                                 </div>
                             </div><a class="btn btn-primary" role="button" style="font-size: 20px;background-color: rgb(79,121,96);" href="https://www.facebook.com/events/895686697480879/">Register</a></div>
                     </div>
-                    <div class="card"><img class="card-img-top w-100 d-block" src="images/37684782_10156397723872591_6630639557459050496_n.jpg?h=1ceab28f215fc1b1c55433fe4e44ff1e" style="height: 258px;">
+                    <div class="card"><img class="card-img-top w-100 d-block" src="/images/37684782_10156397723872591_6630639557459050496_n.jpg?h=1ceab28f215fc1b1c55433fe4e44ff1e" style="height: 258px;">
                         <div class="card-body text-center">
                             <h4 class="card-title"><strong>Friday Burger Night</strong><br></h4>
                             <p class="card-text"></p>
