--- a/views/check_out.hbs
+++ b/views/check_out.hbs
@@ -1,3 +1,8 @@
+<!--File: check_out.hbs-->
+<!--Authors: Alex Antaki, Matthew Oakley, Alex Mahlmeister, Raislan Aiken, and Jaspreet Singh-->
+<!--Date: 11/10/2019-->
+<!--Description: This is the body of the visitTheFarm page-->
+
 <!--This is the body of the check out page-->
 <header></header><a href="/cart" style="font-size: 20px;margin-left: 40px;margin-top: 0px;">Back To Cart</a>
   <!--This main is content of the page-->
