--- a/views/summerCamp.hbs
+++ b/views/summerCamp.hbs
@@ -7,11 +7,13 @@
 <div style="background-color: #fffdfa;">
     <div class="container">
         <div class="row">
+            <!--This is the area that says Summer Camp-->
             <div class="col-md-12">
                 <p class="text-center" style="font-size: 40px;padding: 0px;margin: 0px;padding-top: 40px;padding-bottom: 40px;margin-top: 15px;"><strong>Summer Camp</strong></p>
             </div>
         </div>
         <div class="row">
+            <!--This is the part that says having people have unforgettable experiences-->
             <div class="col-md-12" style="margin-top: 15px;">
                 <header>
                     <p class="text-center" style="font-size: 25px;"><strong>Give your child an unforgettable summer experience at Sprout Creek Farm.</strong></p>
@@ -22,9 +24,11 @@
         </div>
         <div class="row">
             <div class="col-md-12" style="padding-top: 35px;">
+                <!--This is what says what do you do at Sprout Creek Farm-->
                 <header>
                     <p class="text-center" style="font-size: 25px;margin-top: 40px;"><strong>What Do You Do At Sprout Creek?!</strong></p>
                 </header>
+                <!--This paragragh provides insight on what the camper will do-->
                 <p class="text-center" style="font-size: 20px;padding-top: 4px;padding-bottom: 4px;margin-left: 12px;">Campers will get to know our animals, learn about and participate in the tasks and projects necessary to run the farm, and enjoy the natural beauty of the extraordinary property. All camp counselors are undergraduate students from
                     Marist College in Poughkeepsie. The Marist Fellows studying education, psychology, and other social and behavioral sciences and are interested in working with children and youth.<br><br>Summer marks the height of activity at Sprout
                     Creek Farm. Our cows and goats are at peak milk production, our garden is full of vegetables ready to be harvested and the creek is finally warm enough for a dip. Campers will share in the work—and play—that makes summer at Sprout
@@ -34,78 +38,95 @@
         </div>
         <div class="row">
             <div class="col" style="margin-bottom: 70px;height: 640px;">
+                <!--This is the part that has overnight events listed-->
                 <div class="card-group">
                     <div class="card"><img class="card-img-top w-100 d-block" src="/images/61c84b31-130c-4de7-9117-7479c6c8e4cc.jpeg?h=a224d31de6213bd183c0ce3557b75e0a">
                         <div class="card-body text-center">
                             <h4 class="card-title"><strong>Spring Break Overnight Camp</strong><br></h4>
+                            <!--This is the part showing the details of the event-->
                             <p class="card-text"></p>
                             <div class="row">
                                 <div class="col">
+                                    <!--This is the days-->
                                     <p style="font-size: 17px;"><i class="fa fa-clock-o"></i>&nbsp;Sun, Mon, Tue, Wed, Thu, Fri,&nbsp;1:00pm - 3:00pm</p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
+                                    <!--This is the dates-->
                                     <p style="font-size: 17px;"><i class="fa fa-calendar-o"></i>&nbsp;Apr 5, 2020 - Apr 10, 2020 (6 days)</p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
+                                    <!--This is the age range-->
                                     <p style="font-size: 17px;"><i class="fa fa-birthday-cake"></i>&nbsp; Ages 9 - 17 yrs&nbsp;</p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
+                                    <!--This is the part that says Sprout Creek in the bottom of the panes-->
                                     <p style="font-size: 17px;"><i class="fa fa-map-signs"></i>&nbsp;Sprout Creek Farm</p>
                                 </div>
                             </div><a class="btn btn-primary" role="button" style="font-size: 20px;background-color: rgb(79,121,96);" href="https://www.hisawyer.com/sprout-creek-farm/schedules/activity-set/89834?source=camp">Register</a></div>
                     </div>
+                    <!--Our second event is here-->
                     <div class="card"><img class="card-img-top w-100 d-block" src="/images/84af876c-0234-4b4d-8e7c-64d607e19342.jpeg?h=13c9cabfa58109e4968d626024553068">
                         <div class="card-body text-center">
                             <h4 class="card-title"><strong>Spring Break Mini Week Overnight Camp</strong></h4>
                             <p class="card-text"></p>
                             <div class="row">
                                 <div class="col">
+                                    <!--These are the days for the events-->
                                     <p style="font-size: 17px;"><i class="fa fa-clock-o"></i>&nbsp; Sun, Mon, Tue, Wed,&nbsp;1:00pm - 3:00pm</p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
+                                    <!--These are the dates that it is happening-->
                                     <p style="font-size: 17px;"><i class="fa fa-calendar-o"></i>&nbsp; Apr 5, 2020 - Apr 8, 2020 (4 days)</p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
+                                    <!--This is the age range-->
                                     <p style="font-size: 17px;"><i class="fa fa-birthday-cake"></i>&nbsp; Ages 9 - 17 yrs&nbsp;</p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
+                                    <!--This is the Sprout Creek Farm wording-->
                                     <p style="font-size: 17px;"><i class="fa fa-map-signs"></i>&nbsp; Sprout Creek Farm<br><br></p>
                                 </div>
                             </div><a class="btn btn-primary" role="button" style="font-size: 20px;background-color: rgb(79,121,96);" href="https://www.hisawyer.com/sprout-creek-farm/schedules/activity-set/94801?source=camp">Register</a></div>
                     </div>
+                    <!--This is the picture for our event-->
                     <div class="card"><img class="card-img-top w-100 d-block" src="/images/69b16b10-0b1d-451c-b971-ba2a3709cf84.jpeg?h=5e7952d91b9f00e2f0f1545d136da0dc">
                         <div class="card-body text-center">
+                            <!--This is the spring break title-->
                             <h4 class="card-title"><strong>Spring Break Mini Week Overnight Camp</strong></h4>
                             <p class="card-text"></p>
                             <div class="row">
                                 <div class="col">
+                                    <!--The times are located here-->
                                     <p style="font-size: 17px;"><i class="fa fa-clock-o"></i>&nbsp;Mon, Tue, Wed, Thu, Fri,&nbsp;9:00am - 4:00pm</p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
+                                    <!--The dates are here-->
                                     <p style="font-size: 17px;"><i class="fa fa-calendar-o"></i>&nbsp;Apr 6, 2020 - Apr 10, 2020 (5 days)</p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
+                                    <!--The ages are located here-->
                                     <p style="font-size: 17px;"><i class="fa fa-birthday-cake"></i>&nbsp;Ages 5 - 14 yrs&nbsp;</p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col">
+                                    <!--The is the bottom part that has the wording Sprout Creek Farm situated above the button-->
                                     <p style="font-size: 17px;"><i class="fa fa-map-signs"></i>&nbsp; Sprout Creek Farm</p>
                                 </div>
                             </div><a class="btn btn-primary" role="button" style="font-size: 20px;background-color: rgb(79,121,96);" href="https://www.hisawyer.com/sprout-creek-farm/schedules/activity-set/89830-spring-break-day-camp?source=camp">Register</a></div>
