Added more funcitonality to the pages

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -96,7 +96,15 @@
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="padding: 8px;margin: 0px;"></a></li>
               </ul>
               <!--This is the button itself and the link to the login page-->
-              <button onclick = "window.location.href='login'" class="btn btn-primary" type="button" style="width: 85px;margin: 9px;padding: 6px;background-color: rgb(79,121,96);">Log In</button></div>
+              <!--<script>-->
+              <!--  if(document.URL.contains("user_dashboard")){-->
+              <!--    document.write("Hi");-->
+              <!--  }-->
+              <!--</script>-->
+              <button onclick = "window.location.href='login'" class="btn btn-primary" type="hidden" style="width: 85px;margin: 9px;padding: 6px;background-color: rgb(79,121,96);">Log In</button></div>
+
+              <!--<button onclick = "eraseCookie()" class="btn btn-primary" type="hidden" style="width: 85px;margin: 9px;padding: 6px;background-color: rgb(79,121,96);">Log Out</button></div>-->
+
         </div>
     </nav>
 
