--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,8 +1,7 @@
 <!--File: login.hbs-->
 <!--Authors: Alex Antaki, Matthew Oakley, Alex Mahlmeister, Raislan Aiken, and Jaspreet Singh-->
 <!--Date: 11/09/2019-->
-<!--Description: This is the login page
--->
+<!--Description: This is the login page-->
 <body style="background-color: #fffdfa;">
   <!--This is where the body of the page is located for the login-->
   <div class="container" style="height: 663px;padding: -1px;width: 100%;">
@@ -21,14 +20,14 @@
                           </div>
 
                           <!--This form is where the user will input the credentials to log in-->
-                          <form class="user" style="margin-top: 0px;">
-                              <div class="form-group"><input class="form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Username" name="email" style="font-size: 18px;"></div>
-                              <div class="form-group"><input class="form-control form-control-user" type="password" id="exampleInputPassword" placeholder="Password" name="password" style="font-size: 18px;"></div>
+                          <form class="user" action="/api/login" method = "post" style="margin-top: 0px;">
+                              <div class="form-group"><input class="form-control form-control-user" type="text" id="username" placeholder="Username" name="username" style="font-size: 18px;"></div>
+                              <div class="form-group"><input class="form-control form-control-user" type="password" id="password" placeholder="Password" name="password" style="font-size: 18px;"></div>
                               <div class="form-group">
                                   <div class="custom-control custom-checkbox small">
                                       <div class="form-check"><input class="form-check-input custom-control-input" type="checkbox" id="formCheck-1"><label class="form-check-label custom-control-label" for="formCheck-1" style="font-size: 14px;">Remember Me</label></div>
                                   </div>
-                              </div><button class="btn btn-primary btn-block text-white btn-user" type="submit" style="font-size: 18px;background-color: rgb(79,121,96);">Login</button>
+                              </div><button class="btn btn-primary btn-block text-white btn-user" type="submit" value="Submit" style="font-size: 18px;background-color: rgb(79,121,96);">Login</button>
                               <hr>
                               <hr>
                           </form>
