Added additional tweaks to these pages again

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,6 +2,8 @@
 <!--Authors: Alex Antaki, Matthew Oakley, Alex Mahlmeister, Raislan Aiken, and Jaspreet Singh-->
 <!--Date: 11/09/2019-->
 <!--Description: This is the layout page.  This is the header and footer for every page-->
+
+
 <!DOCTYPE html>
 <html>
 
@@ -30,6 +32,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/assets/owl.carousel.css">
     <link rel="stylesheet" href="/stylesheets/styles.min.css?h=ff1782feec5a88a7ed7e0e0d66a20689">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+    <link rel="stylesheet" href="/fonts/simple-line-icons.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="/fonts/fontawesome5-overrides.min.css?h=cfa788754642173dafbd830bd7969fdb">
+    <link rel="stylesheet" href="/bootstrap/css/Animated-Pretty-Product-List-v12.css?h=05002a2c3312bdb94ad95444ddc83d83">
+
 
 
     <script src="/javascripts/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
