Added market page to handlebars

--- a/views/market.hbs
+++ b/views/market.hbs
@@ -1,3 +1,122 @@
+<div data-bs-parallax-bg="true" style="height: 480px;background-image: url(&quot;images/Sprout-Creek-Farm-1.jpg?h=c05c278684df60a8049c801271b57a3a&quot;);background-position: top;background-size: cover;opacity: 1;"></div>
+<main class="page catalog-page">
+    <section class="clean-block clean-catalog dark">
+        <div class="block-heading" style="padding: 0px;">
+            <div class="text-center block-heading" style="background-color: #fffaf2;color: rgb(255,255,255);padding: 20px;padding-left: 20px;margin-top: 60px;">
+                <h2 class="text-center" style="padding-top: 0px;font-size: 38px;margin-top: 0px;margin-bottom: 15px;color: rgb(49,52,55);">Market Place</h2>
+                <p style="font-size: 25px;margin-top: 30px;margin-bottom: 0px;color: rgb(133,135,150);">From Our Home To Yours.<br>Choose From Our Wide Range Of Award Winning Cheeses!</p>
+            </div>
+        </div>
+        <div class="container border rounded border-light shadow" style="margin-top: 25px;margin-bottom: 70px;padding: 0px;padding-top: 0px;">
+            <div class="shadow-lg content">
+                <div class="row justify-content-center align-items-center" style="padding-bottom: 30px;padding-top: 0px;margin-right: 0px;margin-left: 0px;background-color: #fffaf2;">
+                    <div class="col-md-auto" style="padding-right: 12px;padding-top: 0px;max-width: 100%;background-color: #fffaf2;">
+                        <div class="products" style="background-color: #fffaf2;">
+                            <div class="row no-gutters justify-content-center align-items-center justify-content-sm-center justify-content-md-center justify-content-lg-center justify-content-xl-center" style="padding-top: 20px;background-color: #fffaf2;background-size: auto;filter: blur(0px);">
+                                <div class="col-12 col-md-6 col-lg-6 col-xl-5 text-center align-self-center" style="padding: 10px;padding-right: 20px;margin-left: 15px;padding-left: 20px;margin-right: 30px;max-width: 100%;margin-top: 30px;background-color: #fffaf2;margin-bottom: 10px;">
+                                    <div class="border rounded shadow clean-product-item" style="background-color: #fbf5f5;padding: 14px;">
+                                        <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" id="itemPicture" src="/images/bogart.jpg?h=e60673f3dcbecae44bc43ea5761f59d0" style="min-height: 160px;min-width: 200px;"></a></div>
+                                        <div class="text-center product-name" style="margin-top: 10px;margin-bottom: 15px;font-size: 20px;"><a class="text-center" id="itemName" href="#" style="font-size: 24px;"><strong><em>Bogart</em></strong></a></div>
+                                        <div>
+                                            <h3 class="text-left" style="font-size: 20px;color: rgb(98,100,112);"><strong>Price:</strong>&nbsp;</h3>
+                                        </div>
+                                        <p class="text-left" id="itemPrice" style="font-size: 20px;color: rgb(98,100,112);">$12.00</p>
+                                        <div class="about">
+                                            <div class="rating" style="margin-top: 20px;">
+                                                <h3 class="text-left" style="font-size: 20px;color: rgb(98,100,112);"><strong>Description:</strong></h3>
+                                                <p class="text-left" id="itemDescription" style="font-size: 18px;color: rgb(98,100,112);">This savory smear-ripened raw cows' milk cheese with a full scattering of eyes has an aromatic soft yellow paste, and a crisp coppery rind. Aged 2-4 months.<br></p>
+                                            </div>
+                                        </div>
+                                    </div><button class="btn btn-primary btn-block border rounded shadow" id="addToCart" type="button" style="background-color: rgb(79,121,96);margin-bottom: 0px;height: 45px;font-size: 18px;"><i class="icon-basket"></i>&nbsp;Add To Cart</button></div>
+                                <div
+                                    class="col-12 col-md-6 col-lg-6 col-xl-5 text-center align-self-center" style="padding: 10px;padding-right: 20px;margin-left: 15px;padding-left: 20px;margin-right: 30px;max-width: 100%;margin-top: 30px;background-color: #fffaf2;margin-bottom: 10px;">
+                                    <div class="border rounded shadow clean-product-item" style="background-color: #fbf5f5;padding: 14px;">
+                                        <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" id="itemPicture" src="/images/bogart.jpg?h=e60673f3dcbecae44bc43ea5761f59d0" style="min-height: 160px;min-width: 200px;"></a></div>
+                                        <div class="text-center product-name" style="margin-top: 10px;margin-bottom: 15px;font-size: 20px;"><a class="text-center" id="itemName" href="#" style="font-size: 24px;"><strong><em>Bogart</em></strong></a></div>
+                                        <div>
+                                            <h3 class="text-left" style="font-size: 20px;color: rgb(98,100,112);"><strong>Price:</strong>&nbsp;</h3>
+                                        </div>
+                                        <p class="text-left" id="itemPrice" style="font-size: 20px;color: rgb(98,100,112);">$12.00</p>
+                                        <div class="about">
+                                            <div class="rating" style="margin-top: 20px;">
+                                                <h3 class="text-left" style="font-size: 20px;color: rgb(98,100,112);"><strong>Description:</strong></h3>
+                                                <p class="text-left" id="itemDescription" style="font-size: 18px;color: rgb(98,100,112);">This savory smear-ripened raw cows' milk cheese with a full scattering of eyes has an aromatic soft yellow paste, and a crisp coppery rind. Aged 2-4 months.<br></p>
+                                            </div>
+                                        </div>
+                                    </div><button class="btn btn-primary btn-block border rounded shadow" id="addToCart1" type="button" style="background-color: rgb(79,121,96);margin-bottom: 0px;height: 45px;font-size: 18px;"><i class="icon-basket"></i>&nbsp;Add To Cart</button></div>
+                            <div
+                                class="col-12 col-md-6 col-lg-6 col-xl-5 text-center align-self-center" style="padding: 10px;padding-right: 20px;margin-left: 15px;padding-left: 20px;margin-right: 30px;max-width: 100%;margin-top: 30px;background-color: #fffaf2;margin-bottom: 10px;">
+                                <div class="border rounded shadow clean-product-item" style="background-color: #fbf5f5;padding: 14px;">
+                                    <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" id="itemPicture" src="/images/bogart.jpg?h=e60673f3dcbecae44bc43ea5761f59d0" style="min-height: 160px;min-width: 200px;"></a></div>
+                                    <div class="text-center product-name" style="margin-top: 10px;margin-bottom: 15px;font-size: 20px;"><a class="text-center" id="itemName" href="#" style="font-size: 24px;"><strong><em>Bogart</em></strong></a></div>
+                                    <div>
+                                        <h3 class="text-left" style="font-size: 20px;color: rgb(98,100,112);"><strong>Price:</strong>&nbsp;</h3>
+                                    </div>
+                                    <p class="text-left" id="itemPrice" style="font-size: 20px;color: rgb(98,100,112);">$12.00</p>
+                                    <div class="about">
+                                        <div class="rating" style="margin-top: 20px;">
+                                            <h3 class="text-left" style="font-size: 20px;color: rgb(98,100,112);"><strong>Description:</strong></h3>
+                                            <p class="text-left" id="itemDescription" style="font-size: 18px;color: rgb(98,100,112);">This savory smear-ripened raw cows' milk cheese with a full scattering of eyes has an aromatic soft yellow paste, and a crisp coppery rind. Aged 2-4 months.<br></p>
+                                        </div>
+                                    </div>
+                                </div><button class="btn btn-primary btn-block border rounded shadow" id="addToCart" type="button" style="background-color: rgb(79,121,96);margin-bottom: 0px;height: 45px;font-size: 18px;"><i class="icon-basket"></i>&nbsp;Add To Cart</button></div>
+                        <div
+                            class="col-12 col-md-6 col-lg-6 col-xl-5 text-center align-self-center" style="padding: 10px;padding-right: 20px;margin-left: 15px;padding-left: 20px;margin-right: 30px;max-width: 100%;margin-top: 30px;background-color: #fffaf2;margin-bottom: 10px;">
+                            <div class="border rounded shadow clean-product-item" style="background-color: #fbf5f5;padding: 14px;">
+                                <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" id="itemPicture" src="/images/bogart.jpg?h=e60673f3dcbecae44bc43ea5761f59d0" style="min-height: 160px;min-width: 200px;"></a></div>
+                                <div class="text-center product-name" style="margin-top: 10px;margin-bottom: 15px;font-size: 20px;"><a class="text-center" id="itemName" href="#" style="font-size: 24px;"><strong><em>Bogart</em></strong></a></div>
+                                <div>
+                                    <h3 class="text-left" style="font-size: 20px;color: rgb(98,100,112);"><strong>Price:</strong>&nbsp;</h3>
+                                </div>
+                                <p class="text-left" id="itemPrice" style="font-size: 20px;color: rgb(98,100,112);">$12.00</p>
+                                <div class="about">
+                                    <div class="rating" style="margin-top: 20px;">
+                                        <h3 class="text-left" style="font-size: 20px;color: rgb(98,100,112);"><strong>Description:</strong></h3>
+                                        <p class="text-left" id="itemDescription" style="font-size: 18px;color: rgb(98,100,112);">This savory smear-ripened raw cows' milk cheese with a full scattering of eyes has an aromatic soft yellow paste, and a crisp coppery rind. Aged 2-4 months.<br></p>
+                                    </div>
+                                </div>
+                            </div><button class="btn btn-primary btn-block border rounded shadow" id="addToCart" type="button" style="background-color: rgb(79,121,96);margin-bottom: 0px;height: 45px;font-size: 18px;"><i class="icon-basket"></i>&nbsp;Add To Cart</button></div>
+                    <div
+                        class="col-12 col-md-6 col-lg-6 col-xl-5 text-center align-self-center" style="padding: 10px;padding-right: 20px;margin-left: 15px;padding-left: 20px;margin-right: 30px;max-width: 100%;margin-top: 30px;background-color: #fffaf2;margin-bottom: 10px;">
+                        <div class="border rounded shadow clean-product-item" style="background-color: #fbf5f5;padding: 14px;">
+                            <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" id="itemPicture" src="/images/bogart.jpg?h=e60673f3dcbecae44bc43ea5761f59d0" style="min-height: 160px;min-width: 200px;"></a></div>
+                            <div class="text-center product-name" style="margin-top: 10px;margin-bottom: 15px;font-size: 20px;"><a class="text-center" id="itemName" href="#" style="font-size: 24px;"><strong><em>Bogart</em></strong></a></div>
+                            <div>
+                                <h3 class="text-left" style="font-size: 20px;color: rgb(98,100,112);"><strong>Price:</strong>&nbsp;</h3>
+                            </div>
+                            <p class="text-left" id="itemPrice" style="font-size: 20px;color: rgb(98,100,112);">$12.00</p>
+                            <div class="about">
+                                <div class="rating" style="margin-top: 20px;">
+                                    <h3 class="text-left" style="font-size: 20px;color: rgb(98,100,112);"><strong>Description:</strong></h3>
+                                    <p class="text-left" id="itemDescription" style="font-size: 18px;color: rgb(98,100,112);">This savory smear-ripened raw cows' milk cheese with a full scattering of eyes has an aromatic soft yellow paste, and a crisp coppery rind. Aged 2-4 months.<br></p>
+                                </div>
+                            </div>
+                        </div><button class="btn btn-primary btn-block border rounded shadow" id="addToCart" type="button" style="background-color: rgb(79,121,96);margin-bottom: 0px;height: 45px;font-size: 18px;"><i class="icon-basket"></i>&nbsp;Add To Cart</button></div>
+                <div
+                    class="col-12 col-md-6 col-lg-6 col-xl-5 text-center align-self-center" style="padding: 10px;padding-right: 20px;margin-left: 15px;padding-left: 20px;margin-right: 30px;max-width: 100%;margin-top: 30px;background-color: #fffaf2;margin-bottom: 10px;">
+                    <div class="border rounded shadow clean-product-item" style="background-color: #fbf5f5;padding: 14px;">
+                        <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" id="itemPicture" src="/images/bogart.jpg?h=e60673f3dcbecae44bc43ea5761f59d0" style="min-height: 160px;min-width: 200px;"></a></div>
+                        <div class="text-center product-name" style="margin-top: 10px;margin-bottom: 15px;font-size: 20px;"><a class="text-center" id="itemName" href="#" style="font-size: 24px;"><strong><em>Bogart</em></strong></a></div>
+                        <div>
+                            <h3 class="text-left" style="font-size: 20px;color: rgb(98,100,112);"><strong>Price:</strong>&nbsp;</h3>
+                        </div>
+                        <p class="text-left" id="itemPrice" style="font-size: 20px;color: rgb(98,100,112);">$12.00</p>
+                        <div class="about">
+                            <div class="rating" style="margin-top: 20px;">
+                                <h3 class="text-left" style="font-size: 20px;color: rgb(98,100,112);"><strong>Description:</strong></h3>
+                                <p class="text-left" id="itemDescription" style="font-size: 18px;color: rgb(98,100,112);">This savory smear-ripened raw cows' milk cheese with a full scattering of eyes has an aromatic soft yellow paste, and a crisp coppery rind. Aged 2-4 months.<br></p>
+                            </div>
+                        </div>
+                    </div><button class="btn btn-primary btn-block border rounded shadow" id="addToCart" type="button" style="background-color: rgb(79,121,96);margin-bottom: 0px;height: 45px;font-size: 18px;"><i class="icon-basket"></i>&nbsp;Add To Cart</button></div>
+        </div>
+        </div>
+        </div>
+        </div>
+        </div>
+        </div>
+    </section>
+</main>
+<!--
 <h2> MARKET PAGE!!!! </h2>
 <h1> Items </h1>
   <table>
@@ -25,3 +144,4 @@
     {{/each}}
   </table>
 <h1> END ITEMS </h1>
+-->
