Added the new sections of the ui

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,11 +3,11 @@
 <!--Date: 11/10/2019-->
 <!--Description: This is the body of the about page-->
 
-<body>
+<body style="background-color: #fffdfa;">
 <!--This div is the image we see when the page loads-->
 <div data-bs-parallax-bg="true" style="height: 480px; background-image: url(&quot;images/DSC_7553.jpg?h=6fb7f77418f4702a9421862424bc40f6&quot;);background-position: center; background-size: cover;"></div>
 <!--This is the div that holds the wording-->
-<div>
+<div style="background-color: #fffdfa;">
     <div class="container">
         <div class="row">
             <!--This is the part that says about us-->
@@ -51,7 +51,7 @@
     </div>
 </div>
 <!--This div holds the people and the contact info for them-->
-<div class="team-clean">
+<div class="team-clean" style="background-color: #fffdfa;">
     <div class="container">
         <div class="row people">
             <!--This is the first person Kim and her contact info-->
