--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,13 +4,14 @@
 <!--Description: This is the login page-->
 <body style="background-color: #fffdfa;">
   <!--This is where the body of the page is located for the login-->
-  <div class="container" style="height: 663px;padding: -1px;width: 100%;">
-      <div class="card shadow-lg o-hidden border-0 my-5" style="height: 524px;">
+  <div class="container" style="height: 663px;padding: -1px;">
+    <br/><br/>
+      <div style="height: 524px; width: 95%; border-style: solid;">
           <div class="card-body p-0">
               <div class="row">
                   <!--The image is used here-->
                   <div class="col-lg-6 d-none d-lg-flex">
-                      <div class="flex-grow-1 bg-login-image" style="background-image: url(&quot;images/Screen%20Shot%202019-10-17%20at%2012.45.40%20PM.png?h=ad61056d996fd9c621711ba11e9c57b4&quot;);height: 525px;background-position: center;background-repeat: no-repeat;background-size: cover;"></div>
+                      <div class="flex-grow-1 bg-login-image" style="background-image: url(&quot;images/Screen%20Shot%202019-10-17%20at%2012.45.40%20PM.png?h=ad61056d996fd9c621711ba11e9c57b4&quot;);height: 519px;background-position: center;background-repeat: no-repeat;background-size: cover;"></div>
                   </div>
                   <div class="col-lg-6">
                       <div class="p-5" style="margin-top: 20px;">
